# velo

./: CHANGELOG.md  CLAUDE.md  README.md  com.velomail.app.desktop  com.velomail.app.metainfo.xml  index.html  package-lock.json  package.json  splashscreen.html  velo.spec
.claude/skills/document-feature/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs.yml  feature_request.yml
.github/workflows/: packaging.yml  release-please.yml  release.yml  update-homebrew.yml
docs/: architecture.md  development.md  homebrew-distribution-plan.md  keyboard-shortcuts.md  missing-features.md
src/: App.tsx  ThreadWindow.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  oauth.rs
src-tauri/src/imap/: client.rs  types.rs
src/components/accounts/: AccountSwitcher.tsx  AddAccount.tsx  AddImapAccount.tsx  AddJmapAccount.tsx  SetupClientId.tsx
src/components/ai/: BehaviorSuggestionBanner.tsx  TodoSuggestionsPanel.tsx  WorkPriorityPanel.tsx
src/components/composer/: AddressInput.tsx  Composer.tsx  EditorToolbar.tsx  UndoSendToast.tsx
src/components/email/: ActionBar.tsx  AttachmentList.test.tsx  AttachmentList.tsx  ContactSidebar.tsx  EmailRenderer.tsx  InlineAttachmentPreview.test.tsx  InlineAttachmentPreview.tsx  InlineReply.tsx  LinkConfirmDialog.tsx  MessageItem.tsx  PhishingBanner.tsx  RawMessageModal.test.tsx  RawMessageModal.tsx  SnoozeDialog.tsx  ThreadCard.tsx  ThreadSummary.tsx  ThreadView.tsx
src/components/help/: HelpPage.test.ts  HelpSidebar.tsx
src/components/layout/: EmailList.tsx  ReadingPane.tsx  Sidebar.tsx
src/components/search/: CommandPalette.tsx  SearchBar.tsx  ShortcutsHelp.tsx
src/constants/: helpContent.ts  shortcuts.ts  themes.test.ts  themes.ts
src/hooks/: useKeyboardShortcuts.ts
src/router/: navigate.ts  routeTree.tsx
src/services/: emailActions.test.ts  emailActions.ts
src/services/ai/: prompts.ts  (+12 more)
src/stores/: accountStore.test.ts  accountStore.ts  composerStore.test.ts  composerStore.ts  labelStore.test.ts  smartFolderStore.test.ts  smartFolderStore.ts  taskStore.test.ts  taskStore.ts  threadStore.test.ts  threadStore.ts  uiStore.test.ts  uiStore.ts
src/styles/: globals.css
src/utils/: date.ts  emailBuilder.test.ts  emailBuilder.ts  phishingDetector.test.ts  phishingDetector.ts  resolveFromAddress.test.ts
(+114 files in other folders)
